@@ -10,6 +10,7 @@
 :v1_2_0: {base}/compare/v1.1.1..v1.2.0
 :v1_3_0: {base}/compare/v1.2.0..v1.3.0
 :v1_4_0: {base}/compare/v1.3.0..v1.4.0
+:v1_4_1: {base}/compare/v1.4.0..v1.4.1
 :unreleased: {base}/compare/v1.4.0..HEAD
 
 All notable changes to this project will be documented in this file.
@@ -20,6 +21,12 @@ and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Version
 == {unreleased}[Unreleased]
 
 This section tracks upcoming changes that are not yet released.
+
+== {v1_4_1}[v1.4.1]
+
+=== Added
+
+* Trigger DAG-OS pages generation on documentation changes.
 
 === Fixed
 
